<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/todo_dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/todo_placeholder_task"></EditText>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_dialog_category_business"
            android:textColor="@color/white"></RadioButton>

        <RadioButton
            android:id="@+id/rdPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:checked="false"
            android:text="@string/todo_dialog_category_personal"
            android:textColor="@color/white"></RadioButton>

        <RadioButton
            android:id="@+id/rdOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:checked="false"
            android:text="@string/todo_dialog_category_other"
            android:textColor="@color/white"></RadioButton>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddTask"
        android:text="@string/todo_dialog_btn_create_task"
        android:backgroundTint="@color/todo_accent"
        >
    </Button>

</LinearLayout>